# ocaml-gst-controller

./: gi-gst-controller.opam
lib/: Interpolation_control_source.ml  Interpolation_control_source.mli  Interpolation_mode.ml  Interpolation_mode.mli  LFOWaveform.ml  LFOWaveform.mli  SList.ml  SList.mli  Timed_value_control_source.ml  Timed_value_control_source.mli  dune
tests/: Test_core.ml
