(rule
 (targets Core_raw.ml Core_raw.mli
          Interpolation_control_source.mli Interpolation_control_source.ml
          Timed_value_control_source.mli Timed_value_control_source.ml)
 (deps    ../gen/gen.exe)
 (action  (run %{deps} -o %{targets})))

(rule
 (targets c_flags.sexp
            c_library_flags.sexp)
  (deps    ../configurator/discover.exe)
  (action  (run %{deps})))


(library
 (name        GstController)
  (public_name gi-gst-controller)
  (libraries ctypes ctypes.foreign gi-glib2 gi-gobject gi-gstreamer)
  (c_names         dyn_load_constants_stubs)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
  (flags -open GLib -open GObject -open Gstreamer)
  )
